# nerdle

ui/: Cargo.toml  index.html
ui/assets/: main.scss
ui/data/: 2024-04-10.json  2024-04-11.json
ui/src/: api.rs  debug.rs  lib.rs  main.rs  task.rs
ui/src/components/: game.rs  guessboard.rs  keyboard.rs  mod.rs
ui/src/state/: config.rs  game.rs  mod.rs  wordlist.rs
