[package]
name = "nerdle_ui"
version = "0.1.0"
edition = "2021"


[profile.release]
lto = true
opt-level = 's'

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.37"
gloo = "0.11.0"
serde = { version = "1.0.197", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
yew = { version = "0.21.0", features = ["csr"] }
[dependencies.web-sys]
version = "0.3.69"
features = [
  'Window',
  'Document',
  'Navigator',
  'Clipboard'
]
